user registration page without style.css

--- a/public/app/views/pages/register.html
+++ b/public/app/views/pages/register.html
@@ -19,5 +19,12 @@
             <br>
             <button class="btn btn-success" type="submt">Register</button>
         </form>
+
+        <br/>
+        <div class="jumbotron text-center" ng-show="register.loading    ">
+            <span class="glyphicon glyphicon-repeat spinner"></span>
+            <p>loading</p>
+        </div>
+
     </div>
 </div>
