--- a/public/app/views/index.html
+++ b/public/app/views/index.html
@@ -11,12 +11,13 @@
     <title>Starter Template · Bootstrap</title>
 
     <link rel="canonical" href="https://getbootstrap.com/docs/4.3/examples/starter-template/">
+    <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap-glyphicons.css" rel="stylesheet">
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="../assets/css/bootstrap.min.css">
+    <link rel="stylesheet" href="assets/css/bootstrap.min.css">
+    <link rel="stylesheet" href="assets/css/animate.css">
+    <link rel="stylesheet" href="assets/css/style.css">
     <link href="starter-template.css" rel="stylesheet">
-    <!-- <script src="assets/js/angular.js"></script> -->
-    <!-- <script src="assets/js/angular-route.js"></script> -->
     <style>
         .bd-placeholder-img {
             font-size: 1.125rem;
@@ -34,11 +35,18 @@
         }
     </style>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.8/angular.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.8/angular-route.min.js"></script>
-    <script src="app/controllers/UserCtrl.js"></script>
-    <script src="app/routes.js"></script>
+    <script src="assets/js/angular.min.js"></script>
+    <script src="assets/js/angular-route.min.js"></script>
+    <script src="assets/js/angular-animate.js"></script>
+
     <script src="app/app.js"></script>
+    <script src="app/routes.js"></script>
+    
+    <script src="app/controllers/UserCtrl.js"></script>
+
+    <script src="app/services/UserService.js"></script>
+    
+    
     
    
 
