--- a/public/app/views/pages/login.html
+++ b/public/app/views/pages/login.html
@@ -7,14 +7,16 @@
         <div class="alert alert-info" ng-show="main.isSuccess">{{ main.Msg}}</div>
         <div class="alert alert-danger" ng-show="!main.isSuccess && main.Msg">{{ main.Msg}}</div>
         <form ng-submit="main.doLogin(loginData)">
-           
+
             <label for="username">Username:s</label>
             <input type="text" name="username" id="username" class="form-control" ng-model="main.loginData.username">
             <br>
             <label for="password">Password: </label>
             <input type="text" name="password" id="password" class="form-control" ng-model="main.loginData.password">
             <br>
-            <button class="btn btn-success" type="submt">Login</button>
+            <button class="btn btn-success" type="submt">Login</button> &nbsp;
+
+            <a href="/auth/facebook" target="_blank" class="btn btn-info">Facebook</a>
         </form>
 
         <br/>
