Adding password confirmation

--- a/public/app/views/index.html
+++ b/public/app/views/index.html
@@ -10,7 +10,7 @@
     <meta name="generator" content="Jekyll v3.8.5">
     <title>Tutorial Node</title>
 
-    <link rel="canonical" href="https://getbootstrap.com/docs/4.3/examples/starter-template/">
+    <!-- <link rel="canonical" href="https://getbootstrap.com/docs/4.3/examples/starter-template/"> -->
     <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap-glyphicons.css" rel="stylesheet">
 
     <!-- Bootstrap CSS -->
@@ -48,13 +48,7 @@
     <script src="app/services/UserService.js"></script>
     <script src="app/services/AuthService.js"></script>
 
-
-
-
-
-
-
-    <!-- Custom styles for this template -->
+      <!-- Custom styles for this template -->
 
 </head>
 
